--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "tsgo -p tsconfig.check.json; npx biome lint; .rules/check.sh;npx tailwindcss -i ./src/index.css -o /dev/null 2>&1 | grep -E '^(CssSyntaxError|Error):.*' || true;.rules/testBuild.sh"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,8 +50,9 @@
     "input-otp": "^1.4.2",
     "ky": "^1.13.0",
     "lucide-react": "^0.553.0",
-    "miaoda-auth-react": "^2.0.6",
-    "miaoda-sc-plugin": "^1.0.31",
+    "mermaid": "^11.12.2",
+    "miaoda-auth-react": "2.0.6",
+    "miaoda-sc-plugin": "1.0.29",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "^18.0.0",
@@ -61,6 +65,7 @@
     "react-resizable-panels": "^2.1.8",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
