--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eventsource-parser": "^3.0.6",
     "groq-sdk": "^0.37.0",
     "input-otp": "^1.4.2",
+    "katex": "^0.16.27",
     "ky": "^1.13.0",
     "lucide-react": "^0.553.0",
     "mermaid": "^11.12.2",
@@ -67,7 +68,9 @@
     "react-router-dom": "^7.9.5",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.3",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
