--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.3",
     "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
