--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "embla-carousel-react": "^8.6.0",
     "eventsource-parser": "^3.0.6",
     "groq-sdk": "^0.37.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.4",
     "katex": "^0.16.27",
     "ky": "^1.13.0",
     "lucide-react": "^0.553.0",
@@ -86,15 +88,16 @@
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/video-react": "^0.15.8",
     "@typescript/native-preview": "7.0.0-dev.20251103.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "miaoda-sc-plugin": "^1.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.11",
     "typescript": "~5.9.3",
     "vite": "^5.1.4",
-    "vite-plugin-svgr": "^4.5.0",
-    "miaoda-sc-plugin": "^1.0.4"
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
